--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
+    "nodemon": "^3.1.3",
     "stripe": "^15.9.0"
   }
 }
